# Ricefy

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/models/: rice_config.py
backend/app/routers/: generate.py
backend/app/services/: color_utils.py  generator.py  storage.py
backend/app/templates/: install.sh.j2
backend/app/templates/hyprland/: hyprland.lua.j2
backend/app/templates/hyprlock/: hyprlock.conf.j2
backend/app/templates/kitty/: kitty.conf.j2
backend/app/templates/rofi/: config.rasi.j2
backend/app/templates/sddm/: Main.qml.j2  theme.conf.j2
backend/app/templates/swaylock/: swaylock.conf.j2
backend/app/templates/waybar/: config.j2  style.css.j2
backend/app/templates/wofi/: config.j2  style.css.j2
backend/tests/: test_color_utils.py  test_generator.py  test_install_script.py  test_models.py  test_router_generate.py  test_storage.py  test_templates.py
docs/: ENV.md  db.sql  dbsetup.sql
frontend/: .env.local.example  .gitignore  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/download/: page.tsx
frontend/src/components/configurator/: ConfigPreview.tsx  ConfiguratorLayout.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/contexts/: RiceConfigContext.tsx
frontend/src/hooks/: useRiceConfig.ts  useUser.ts
frontend/src/lib/: defaults.ts  waybar-meta.ts
frontend/src/store/: useRiceStore.ts
frontend/src/types/: rice-config.ts
(+34 files in other folders)
